# nixos-flake

./: .envrc  .sops.yaml  README.md  flake.nix  pre-commit-hooks.nix  scripts.nix
.github/workflows/: check.yml  update-tree.yml
home/: README.md  default.nix  persistence.nix
home/gui/: chromium.nix  default.nix  floorp.nix  ghostty.nix  mpv.nix  niri.nix  obsidian.nix  oculante.nix  planify.nix  prusaslicer.nix  sioyek.nix  spicetify.nix  steam.nix  vscode.nix
home/profiles/: default.nix
home/programs/: cosmic.nix  default.nix  firefox.nix  gtk.nix  nwg-drawer.nix  spicetify.nix
home/programs/wayland/scripts/: Cargo.toml  flake.nix
home/scripts/: result
home/services/: default.nix
home/shells/: bash.nix  default.nix  fish.nix  starship.nix
home/terminals/: default.nix
home/tui/: bat.nix  broot.nix  default.nix  direnv.nix  fzf.nix  git.nix  rbw.nix  rclone.nix  rip.nix  sops.nix  spotify-player.nix  spotify-tui.nix  typix.nix  yazelix.nix
home/wm/: default.nix
hosts/: README.md  default.nix
hosts/desktop/: boot-zfs.nix  default.nix  hardware-configuration.nix  ssh_host_ed25519_key.pub
hosts/surface/: default.nix  ssh_host_ed25519_key.pub
secrets/: secret-key  secrets.json
system/: README.md  default.nix  network.nix  persistence.nix
system/core/: boot.nix  default.nix  security.nix  users.nix
system/hardware/: bluetooth.nix  default.nix
system/network/: default.nix
system/nix/: default.nix  nh.nix  nixpkgs.nix  sources.json  substituters.nix
system/programs/: cosmic.nix  default.nix  development.nix  fonts.nix  home-manager.nix  (+5 more)
(+93 files in other folders)
