[package]
# If you change the name here, run `cargo generate-lockfile` afterwards
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
psutil = "3.0.0"
serde = "1.0.189"
serde_json = "1.0.107"
sysinfo = "0.24.0"
